# fmnist-proejct

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  random_forest.py  references.bib  report.blg
cnn/: eval.py  fashion_cnn_best.pt  plot_train_logs.py  shared.py  train.py
logs/: cnn_train.jsonl
references/: adam_optimizer.md  batch_normalization.md  benchmarks.md  cnn_fundamentals.md  data_augmentation.md  fashion_mnist_dataset.md  mcnn_architecture.md  random_forest.md
report/: academic_report_draft.md  draft-0.md  draft.md  report.bak0  task.md  todo.md
report/tex/: references.bib  report.aux  report.bak1  report.bak10  report.bak2  report.bak3  report.bak4  report.bak5  report.bak6  report.bak7  report.bak8  report.bak9  report.bbl  report.bcf  report.blg  report.fdb_latexmk  report.fls  report.lof  report.lot  report.run.xml  report.tex  report.toc  report.xdv
src/: random_forest.py
src/cnn/: eval.py  plot_train_logs.py  shared.py  train.py
src/common/: eval.py  paths.py  shared.py
src/random_forest/: __init__.py  eval.py  shared.py  train.py
src/visualization/: dataset_samples.py
